--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,36 +1,28 @@
 ---
 name: Run unit tests
 
-on: [push, pull_request]
+on: push
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        sphinx-version: ["2.2.*", "2.3.*", "2.4.*", "3.0.*"]
+        sphinx-version: ["2.*", "3.*"]
 
-    env:
-      PYTHON: ${{ matrix.python-version }}
-      SPHINX: ${{ matrix.sphinx-version }}
-      OS: "ubuntu"
+    name: Python ${{ matrix.python-version }}, Sphinx ${{ matrix.sphinx-version }}
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install sphinx
-        run: pip install sphinx==${{ matrix.sphinx-version }}
       - name: Install dependencies
         run: |
-          pip install pytest pytest-cov
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
-          source $HOME/.poetry/env
-          poetry install -v --no-dev
-      - name: Run pytest
+          pip install --constraint=.github/workflows/constraints.txt poetry nox
+      - name: Run unit tests with nox
         run: |
-          pytest --cov=./ --cov-report=term --cov-report=xml
+          nox --sessions "test-${{ matrix.python-version }}(sphinx='${{ matrix.sphinx-version }}')"
