--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,26 +15,30 @@ classifiers = [
   'Topic :: Software Development :: Documentation'
 ]
 packages = [
-  { include = "sphinxawesome" }
+  { include = "sphinxawesome", from = "src" }
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6.1, <4.0.0"
 sphinx = ">=2.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^5.4"
 pytest-cov = "^2.9"
-pre-commit = "^2.1.1"
+pre-commit = "^2.5.1"
+coverage = {extras = ["toml"], version = "^5.1"}
 
-[tool.black]
-target-version = ['py36', 'py37', 'py38']
-exclude = '''
-/(
-  \.git
-| \.github
-)/
-'''
+[tool.coverage.paths]
+source = ["src"]
+
+[tool.coverage.run]
+branch = true
+source = ["sphinxawesome.sampdirective"]
+
+[tool.covrage.report]
+show_missing = true
+fail_under = 100
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
