--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,14 @@ pytest = "^5.4"
 pytest-cov = "^2.9"
 pre-commit = "^2.5.1"
 coverage = {extras = ["toml"], version = "^5.1"}
+flake8 = "^3.8.3"
+flake8-annotations = "^2.1.0"
+flake8-black = "^0.2.0"
+flake8-bandit = "^2.1.2"
+flake8-bugbear = "^20.1.4"
+flake8-docstrings = "^1.5.0"
+flake8-import-order = "^0.18.1"
+black = "^19.10b0"
 
 [tool.coverage.paths]
 source = ["src"]
