--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8-bugbear = "^20.1.4"
 flake8-docstrings = "^1.5.0"
 flake8-import-order = "^0.18.1"
 black = "^19.10b0"
+mypy = "^0.780"
 
 [tool.coverage.paths]
 source = ["src"]
