--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1, <4.0.0"
+python = ">=3.6.2, <4.0.0"
 sphinx = ">=2.2"
 importlib_metadata = {version = ">=1.6.1,<5.0.0", python = "<3.8"}
 
@@ -34,13 +34,13 @@ flake8-black = "^0.2.1"
 flake8-bandit = "^2.1.2"
 flake8-bugbear = "^21.3.2"
 flake8-docstrings = "^1.6.0"
-black = "^20.8b1"
-mypy = "^0.812"
-pytype = {version = "^2021.5.6", python = "3.6 || 3.7 || 3.8"}
+black = "^21.0b6"
+mypy = "^0.910"
 typeguard = "^2.12.1"
 safety = "^1.10.3"
 flake8_implicit_str_concat = "^0.2.0"
 isort = "^5.8.0"
+types-docutils = "^0.1.7"
 
 [tool.coverage.paths]
 source = ["src"]
