--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        sphinx-version: ["2.*", "3.*", "4.*"]
+        sphinx-version: ["3.*", "4.*"]
 
     name: Python ${{ matrix.python-version }}, Sphinx ${{ matrix.sphinx-version }}
 
