chore: update actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, 3.10]
         sphinx-version: ["3.*", "4.*"]
 
     name: Python ${{ matrix.python-version }}, Sphinx ${{ matrix.sphinx-version }}
@@ -22,7 +22,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install --constraint=.github/workflows/constraints.txt poetry nox
+          pip install --constraint=.github/workflows/constraints.txt poetry nox nox-poetry
       - name: Run unit tests with nox
         run: |
           nox --sessions "tests-${{ matrix.python-version }}(sphinx='${{ matrix.sphinx-version }}')"
