--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,14 +9,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up python 3.8
+      - name: Set up python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: "3.8"
+          python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install --constraint=.github/workflows/constraints.txt poetry nox
+          pip install --constraint=.github/workflows/constraints.txt poetry nox nox-poetry
       - name: Run nox workflow
-        run: nox --sessions "tests-3.8(sphinx='3.*')" coverage
+        run: nox --sessions "tests-3.10(sphinx='4.*')" coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
