--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           pip install --constraint=.github/workflows/constraints.txt poetry nox nox-poetry
       - name: Run nox workflow
-        run: nox --sessions "tests-3.10(sphinx='4.*')" coverage
+        run: nox --sessions "tests" --python "3.10" coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
