--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2, <4.0.0"
+python = "^3.7"
 sphinx = ">=2.2"
 importlib_metadata = {version = ">=1.6.1,<5.0.0", python = "<3.8"}
 
@@ -29,18 +29,20 @@ pytest-cov = "^3.0"
 pre-commit = "^2.17.0"
 coverage = {extras = ["toml"], version = "^6.2"}
 flake8 = "^3.9.2"
-flake8-annotations = "^2.7.0"
-flake8-black = "^0.3.1"
-flake8-bandit = "^2.1.2"
-flake8-bugbear = "^22.8.23"
+flake8-annotations = "^2.9.1"
+flake8-black = "^0.3.3"
+flake8-bandit = "^3.0.0"
+flake8-bugbear = "^22.9.11"
 flake8-docstrings = "^1.6.0"
 black = "^22.6"
 mypy = "^0.971"
 typeguard = "^2.13.3"
 safety = "^2.1.1"
-flake8_implicit_str_concat = "^0.2.0"
 isort = "^5.10.1"
-types-docutils = "^0.19.0"
+types-docutils = "^0.19.1"
+
+[tool.poetry.group.dev.dependencies]
+flake8-implicit-str-concat = "^0.3.0"
 
 [tool.coverage.paths]
 source = ["src"]
